--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "devDependencies": {
     "eslint": "^7.29.0",
-    "jest": "^27.0.5"
+    "jest": "^27.0.6"
   },
   "author": "Henry",
   "license": "ISC",
@@ -19,6 +19,8 @@
     "axios": "^0.21.1",
     "git-remote-origin-url": "^3.1.0",
     "git-url-parse": "^11.4.4",
-    "simple-git": "^2.40.0"
+    "simple-git": "^2.40.0",
+    "test": "^0.6.0",
+    "tests": "^0.4.2"
   }
 }
